--- a/src/style.css
+++ b/src/style.css
@@ -83,10 +83,12 @@ body {
     transition: transform .7s ease-in-out;   
 }
 
-.discord_button {
-    transition: transform .7s ease-in-out;
+.discord_button img{
+    transition: transform .5s ease-in-out;
   }
-.discord_button a:hover {
+.discord_button:hover img {
     transform: rotate(360deg);
+    filter: brightness(0) invert(1);
+        transition: 0.3s ease-in-out;
 }
 
