--- a/src/style.css
+++ b/src/style.css
@@ -71,24 +71,27 @@ body {
 }
 
 .footer {
-    position: bottom;
-    color:white;
+    align-items: center;
+    position: absolute;
+    margin-top: 70px;
+    bottom: 15px;
+    left: 2px;
+    z-index: 10px;
+    color:navy;
     background-color: teal;
     text-align: center;
+    border-radius: 20px
 }
 .column {
     vertical-align: middle; 
     display: inline-block;
     padding: 0 15px;
-    transition: transform .7s ease-in-out;   
 }
 
 .discord_button img{
-    transition: transform .5s ease-in-out;
+    transition: transform .7s ease-in-out;
   }
 .discord_button:hover img {
-    transform: rotate(360deg);
-    filter: brightness(0) invert(1);
-        transition: 0.3s ease-in-out;
+    transform: rotate(360deg); 
 }
 
