--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,28 @@ body {
 .checkboxes {
     text-align: center;
 }
+
+.footer {
+    align-items: center;
+    position: absolute;
+    margin-top: 70px;
+    bottom: 15px;
+    left: 2px;
+    z-index: 10px;
+    color:navy;
+    background-color: teal;
+    text-align: center;
+    border-radius: 20px
+}
+.column {
+    vertical-align: middle; 
+    display: inline-block;
+    padding: 0 15px;
+}
+
+.discord_button img{
+    transition: transform .7s ease-in-out;
+  }
+.discord_button:hover img {
+    transform: rotate(360deg);
+}
