--- a/src/style.css
+++ b/src/style.css
@@ -150,3 +150,47 @@ body {
 .location {
     text-align: center;
 }
+
+ul{
+    padding-inline-start: 0px;
+}
+.list_group_item {
+    background-color: white;
+    color: black;
+    display: block;
+    height: 60px;
+    width: 250px;
+    border-radius: 20px;
+    position:relative;
+    margin: 20px auto;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    line-height: 60px;
+    font-size: 15px;
+    transition: 0.3s;
+}
+
+.profile_photo{
+    background-color: teal;
+    color: navy;
+    display: block;
+    height: 30px;
+    width: 30px;
+    border-radius: 20px;
+    justify-content:flex-start;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    line-height: 60px;
+    font-size: 20px;
+    transition: 0.3s;
+}
+
+.profile_text{
+    align-items: flex-start;
+    text-align: center;
+    font-weight: bold;
+    line-height: 60px;
+    font-size: 15px;
+}
